Fix form layout on Safari and Chrome

--- a/less/default.less
+++ b/less/default.less
@@ -4,7 +4,7 @@
 #settings-fields {
 	input {
 	   text-align: center;
-	   margin-right: 5px;
+	   margin-right: 3px;
     }
     
     #stop {
